Fix align emoji

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -39,6 +39,7 @@ ol {
 
   img {
     max-width: 16px;
+    display: inline;
   }
 }
 
